<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/addAds"
        android:title="@string/add_ads" />
    <item
        android:id="@+id/register"
        android:title="@string/n_account" />
    <item
        android:id="@+id/myAds"
        android:title="@string/my_ads" />
    <item
        android:id="@+id/myMsg"
        android:title="@string/msg" />
    <item
        android:id="@+id/transMoney"
        android:title="@string/trans_money" />
    <item
        android:id="@+id/contactUs"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/aboutApp"
        android:title="@string/about_app" />
    <item
        android:id="@+id/rules"
        android:title="@string/rules" />
    <item
        android:id="@+id/change_language"
        android:title="@string/change_language" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>