<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="250.0dip"
                android:layout_height="150.0dip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10.0dip"
                android:src="@drawable/empty_logo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="14.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20.0dip">

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:background="@drawable/ed_login"
                android:drawableRight="@drawable/user_icon"
                android:drawablePadding="5.0dip"
                android:text="wzz"
                android:hint="@string/username"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/ed_login"
                android:drawableRight="@drawable/pass_icon"
                android:drawablePadding="5.0dip"
                android:hint="@string/password"
                android:text="123456"
                android:inputType="textPassword"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14.0sp" />

            <TextView
                android:onClick="goForget"
                android:id="@+id/forget_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:text="@string/forget_pass"
                android:textColor="@color/colorPrimary"
                android:textSize="14.0sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/login_btn"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70.0dip">

            <TextView
                android:onClick="goRegister"
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="14.0sp"
                android:textStyle="bold" />

            <Button
                android:onClick="goMain"
                android:id="@+id/skip"
                android:layout_width="120.0dip"
                android:layout_height="37.0dip"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20.0dip"
                android:background="@drawable/skip_btn"
                android:text="@string/skip"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>