<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.Toolbar
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetEnd="0.0dip"
            app:contentInsetLeft="0.0dip"
            app:contentInsetRight="0.0dip"
            app:contentInsetStart="0.0dip">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:onClick="back"
                    android:id="@id/back"
                    android:layout_width="56.0dip"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:padding="18.0dip"
                    android:src="@drawable/white_back_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/trans_money"
                    android:textColor="@color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/send_btn"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="10.0dip"
            app:cardCornerRadius="10.0dip">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10.0dip"
                android:paddingTop="10.0dip"
                android:paddingRight="10.0dip"
                android:paddingBottom="5.0dip">

                <TextView
                    android:id="@id/user_name"
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@drawable/et_bg_trans"
                    android:drawablePadding="5.0dip"
                    android:gravity="center|right"
                    android:hint="@string/name"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15.0sp" />

                <EditText
                    android:id="@+id/mony"
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@drawable/et_bg_trans"
                    android:gravity="center|right"
                    android:hint="@string/money"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15.0sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trans_bank"
                    android:textColor="@color/black"
                    android:textSize="13.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_bank"
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@drawable/et_bg_trans"
                    android:gravity="center"
                    android:paddingRight="5.0dip"
                    android:text="@string/choose_bank"
                    android:textColor="@color/black"
                    android:textSize="15.0sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.5px"
                    android:layout_marginLeft="3.0dip"
                    android:layout_marginRight="3.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5.0dip"
                    android:text="@string/trans_date"
                    android:textColor="@color/black"
                    android:textSize="16.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@id/date"
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:layout_marginTop="10.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@drawable/et_bg_trans"
                    android:gravity="center|right"
                    android:paddingRight="5.0dip"
                    android:text="@string/day"
                    android:textColor="@color/black"
                    android:textSize="15.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_phone"
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@drawable/et_bg_trans"
                    android:drawablePadding="5.0dip"
                    android:gravity="center|right"
                    android:hint="@string/phone"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15.0sp" />

                <EditText
                    android:id="@+id/ads_id"
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:layout_marginBottom="10.0dip"
                    android:background="@drawable/et_bg_trans"
                    android:drawablePadding="5.0dip"
                    android:gravity="center|right"
                    android:hint="@string/ads_num"
                    android:inputType="number"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15.0sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:orientation="horizontal"
                    android:weightSum="1.0">

                    <ImageView
                        android:id="@+id/upload"
                        android:layout_width="40.0dip"
                        android:layout_height="40.0dip"
                        android:src="@drawable/upload_icon" />

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.0"
                        android:text="@string/attach_image"
                        android:textColor="@color/gray0"
                        android:textSize="12.0sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.github.siyamed.shapeimageview.RoundedImageView
                    android:id="@+id/img"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="5.0dip"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imgs_bg"
                    app:siBorderAlpha="0.0"
                    app:siBorderColor="@android:color/transparent"
                    app:siBorderWidth="0.0dip"
                    app:siRadius="10.0dip" />

                <Button
                    android:id="@id/send_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="40.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginBottom="20.0dip"
                    android:background="@drawable/dark_btn_bg"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>