<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:onClick="back"
            android:id="@+id/back"
            android:layout_width="56.0dip"
            android:layout_height="56.0dip"
            android:layout_gravity="left"
            android:layout_margin="5.0dip"
            android:padding="18.0dip"
            android:src="@drawable/white_back_arrow" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@id/logo"
                android:layout_width="250.0dip"
                android:layout_height="150.0dip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10.0dip"
                android:src="@drawable/empty_logo" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_marginLeft="10.0dip"
                android:layout_marginTop="35.0dip"
                android:layout_marginRight="10.0dip"
                android:text="@string/recover_pass"
                android:textColor="@color/white"
                android:textSize="13.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20.0dip">

            <EditText
                android:id="@id/user_name"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:background="@drawable/ed_login"
                android:drawableRight="@drawable/user_icon"
                android:drawablePadding="5.0dip"
                android:hint="@string/username"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginTop="10.0dip"
                android:background="@drawable/ed_login"
                android:drawableRight="@drawable/email_icon"
                android:drawablePadding="5.0dip"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5.0dip"
                android:paddingRight="5.0dip"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14.0sp" />

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/login_btn"
                android:text="@string/reset_password"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>